--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,11 +19,11 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "server": "node src/server.js",  
-    "dev": "concurrently \"npm start\" \"npm run server\""  
+    "server": "node src/server.js",
+    "dev": "concurrently \"npm start\" \"npm run server\""
   },
   "proxy": "http://localhost:5001",
-    "eslintConfig": {
+  "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
@@ -44,7 +45,5 @@
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
-    
   }
-  
 }
