--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@azure/identity": "^4.4.1",
     "@craco/craco": "^7.1.0",
     "@fluentui/react": "^8.120.9",
+    "@fluentui/react-components": "^9.54.15",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "use-file-picker": "^2.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
