--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "concurrently": "^9.0.1",
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "openai": "^4.61.1",
     "react": "^18.3.1",
