--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "^18.0.0",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "modules": "^0.4.0",
     "openai": "^4.61.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
