--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "openai": "^4.61.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "use-file-picker": "^2.1.2",
